--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "cms-ui",
   "version": "0.1.0",
   "private": true,
+  "homepage": "/cms-admin",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -12,7 +14,10 @@
     "@types/react-dom": "^18.2.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.3",
+    "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.1",
     "tailwindcss": "^3.3.3",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
